<resources>
    <string name="app_name">ColorValue</string>
    <string name="add_card_name">Add New Card</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_input_name">You need to specify a color name</string>
    <string name="complete_form">You need to complete the form</string>
    <string name="red_beam">R</string>
    <string name="green_beam">G</string>
    <string name="blue_beam">B</string>
    <string name="input_color_name">Color Name</string>
    <string name="button_add_color">Add Color</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>

    <string name="time_to_practice">Time to practice</string>
    <string name="it_is_time_to_practice">It is time to practice</string>

    <string name="pref_key_notification" translatable="false">pref_key_notification</string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_summary_notification">Notify to study colors</string>
    <string name="notification_channel_id">notify-color-study</string>
    <string name="notification_channel_name">Study color values</string>

    <string name="practice_notification_title_template">Practice: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="practice_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>
